--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
             <h2 class="metal-text">MISIÓN FALLIDA</h2>
             <button onclick="location.reload()">REINTENTAR</button>
         </div>
+        <div id="update-banner" class="update-banner hidden">
+            <span>Nueva versión lista</span>
+            <button onclick="window.location.reload()">ACTUALIZAR</button>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
